// protoc -I=/source/proto/ --go_out=/ --go-grpc_out=/ /source/proto/database/post.proto
syntax = "proto3";

option go_package = "source/user-api-gateway/proto";

package proto;

service LoginService{
    rpc Login(LoginRequest) returns (LoginReply) {};
}

message LoginRequest {
    string account = 1;
    string password = 2;
}

message LoginReply {
    string accessToken = 1;
    string deviceNumber = 2;
}